# Big-Data-Analysis

Labs/LAB-1/: data_insertion.py  database_setup.py  indexing.py  pyproject.toml  queries.py  query_performance_results.xlsx  query_results_with_index.xlsx  refresh.py  requirements.txt  rerun_with_index.py  table_creation.py  visualization.py
Labs/LAB-2/: README.md  Report.docx  delete_and_verify.py  dummy_files_creation.py  enable-versioning.py  pyproject.toml  reupload.py  update_announcement.py
Labs/LAB-2/DummyData/: announcements-2025-09-25.txt  announcements-2025-09-26.txt  listing_objects.py  marks_CS101.csv  marks_CS202.csv  predefined_urls.py  upload_data.py
Labs/LAB-3/: .env  README.md  command.txt  config.py  delete.py  main.py  part-b-model-setup.py  part-c-crud-ops.py  pyproject.toml  requirements.txt
Labs/LAB-4/: 00_mongo-db-docker-setup.md  01_modeling_setup.md  02_crud_queries.py  03_aggregation_pipeline.py  04_indexing_simplified.md  Report.docx  bulk_seeding.py  creating_export.py  requirements.txt
Labs/LAB-4/exports/: books.json  inventory_logs.json  orders.json  reviews.json  sessions.json  users.json  vendors.json
Labs/LAB-5/: README.md  cassandra_setup.py  data-generation.py  delete_cassandra.py  docker-compose.yml  events.csv  load_cassandra.py  load_mysql.py  pyproject.toml  query_cassandra.py  requirements.txt  update_cassandra.py
